fixed global colors/margin on event.svelte/events

--- a/view/public/assets/global.css
+++ b/view/public/assets/global.css
@@ -30,7 +30,7 @@
   --color-dark: #2E2E2E;
   --color-turquoise: #3DCC9F;
   --color-yellow: #FDBF30;
-  --color-violet: #FDBF30;
+  --color-violet: #20175A;
   --color-blue: #30CCFD;
   --color-red: #EF454E;
   --color-green: #36DC6C;
